<resources>
    <string name="app_name">Flag Challenge</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" >Flag Game</string>
    <string name="nav_header_subtitle" translatable="false">v1.0</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_start">Game Started</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="aviso">App Name: \n  appname \n\nVersion: \n  X.X\n\nThanks for downloading! \n\nIf you find any bugs or have any suggestions for the application, please contact us by email: aplicativoparamobile@gmail.com\n\n Developed by: Ezequiel A. Ribeiro</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="hits">HITS</string>
    <string name="flags">FLAGS</string>
    <string name="score">SCORE</string>
    <string name="start_game">START GAME</string>
    <string name="time">TIME</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="you_win_the_game">You win the game if you indicate the names of the flags and symbols. For each correct symbol you receive a triple score and recover a lost star. 5 stars lost you lose the game.</string>
    <string name="how_to_win">How to win</string>
    <string name="example">Example:</string>
    <string name="the_game_has">The game has x1 flags and x2 symbols that have been retired from those flags.</string>
    <string name="the_winner_will_receive_a_trophy">The winner will receive a trophy</string>
    <string name="boa_sorte">Good luck !</string>
    <string name="signin_other_error">Google Play Game: Login failed</string>
    <string name="menu_rank">Global Rank</string>
    <string name="OAuth_Client_Id" translatable="false">562105401196-8ug4lc1e2uik3tppobs6mipqn7j0brud.apps.googleusercontent.com</string>
    <string name="OAuth_Client_Id_Debug" translatable="false">562105401196-mabrkckkv5lp22h3q4at6nbgj6thm7fu.apps.googleusercontent.com</string>
    <string name="app_id">562105401196</string>
    <string name="leaderboard_id">CgkI7P7egK4QEAIQAw</string>
    <string name="global_score">Global Score</string>
    <string name="ad_inter_id">ca-app-pub-0822808376839371/8886805116</string>
    <string name="ad_banner_exit_id">ca-app-pub-0822808376839371/4244751435</string>
    <string name="feedback">FeedBack</string>
</resources>
