<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <!--<item
            android:id="@+id/nav_rank"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_rank" />-->
        <item
            android:id="@+id/nav_privacy"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_privacy" />

        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />

    </group>
</menu>
