<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.bandeira.jogodasbandeirasguiz.ui.Home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_rank"
        android:name="br.bandeira.jogodasbandeirasguiz.ui.Rank.RankFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_rank" >
        <action
            android:id="@+id/action_nav_rank_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_start"
        android:name="br.bandeira.jogodasbandeirasguiz.ui.Start.StartFragment"
        android:label="@string/menu_start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_nav_start_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_home"/>
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="br.bandeira.jogodasbandeirasguiz.ui.About.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_about_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_privacy"
        android:name="br.bandeira.jogodasbandeirasguiz.ui.Privacy.PrivacyFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_privacy" >
        <action
            android:id="@+id/action_nav_privacy_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="br.bandeira.jogodasbandeirasguiz.ui.Help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" >
        <action
            android:id="@+id/action_nav_help_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>